# mdviewer

./: .gitignore  AGENT.md  ANDROID_EVALUATION.md  BUILD_SUMMARY.md  LICENSE  README.md  build-apk.cmd  build.bat  build.ps1  mdviewer.html  sync-frontend.cmd
application/: .gitignore  README.md  mdviewer.wxs  package-lock.json  package.json  setup-android.ps1
application/frontend/: index.html  manifest.json  sw.js
application/src-tauri/: Cargo.toml  tauri.conf.json
application/src-tauri/capabilities/: default.json
application/src-tauri/icons/: icon.icns
application/src-tauri/src/: lib.rs  main.rs
