[package]
name = "mdviewer"
version = "0.2.3"
edition = "2021"

[lib]
name = "mdviewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
walkdir = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
